verbessert
исправления по замечаниям